<resources>
    <string name="app_name">Другой город</string>
    <string name="item_main">Главная</string>

    <string name="menu_main_main">Главная</string>
    <string name="menu_main_news">Новости</string>
    <string name="menu_main_histories">Истории</string>
    <string name="menu_main_tangibles">Ценности</string>
    <string name="menu_main_projects">Спецпроекты</string>
    <string name="menu_main_video">Видео</string>
    <string name="empty" />
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

</resources>
